--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="week">Week</string>
     <string name="month">Month</string>
     <string name="year">Year</string>
-    <string nam
+    <string name="low">Low 24h</string>
+    <string name="high">High 24h</string>
+    <string name="network_failure">Network failure</string>
+    <string name="conversion_error">Conversion 
