--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="conversion_error">Conversion error</string>
     <string name="empty">List is empty</string>
     <string name="unknown">Unknown</string>
-    <string name="details_offline">Can not open details when device is offline</string
+    <string name="details_offline">Can not open details when device is offline</string>
+    <string name="high_24">High 24h</string>
+    <string name="low_24">Low 24h</string>
+    <string name="hash_alg">Hash alg</string>
+    <string name="no_values_catego
